src/objects/ECO_SecurityObjectAccess__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>Name of the Object that is being requested access</description>
        <label>ObjectName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadWriteAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReadWriteAccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoleName__c</fullName>
        <description>Role Name that is requesting access</description>
        <label>RoleName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmitApprovalProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field un-checked means user with this role cannot submit approval from the given object</description>
        <label>Submit Approval Process</label>
        <type>Checkbox</type>
    </fields>
    <label>ECO_SecurityObjectAccess</label>
</CustomObject>